fixed background visibility

--- a/src/scss/utilities/_utility.background.scss
+++ b/src/scss/utilities/_utility.background.scss
@@ -19,10 +19,10 @@
 
 		background-image: linear-gradient(
 				to bottom,
-				rgba(153, 153, 153, 0.25),
+				rgba(153, 153, 153, 0.5),
 				transparent 1px
 			),
-			linear-gradient(to right, rgba(153, 153, 153, 0.25), transparent 1px);
+			linear-gradient(to right, rgba(153, 153, 153, 0.5), transparent 1px);
 
 		background-size: 100% 120px, 120px 100%;
 
